--- a/Mapplas/Mapplas/UserViewController.xib
+++ b/Mapplas/Mapplas/UserViewController.xib
@@ -546,6 +546,10 @@
 							<object class="NSNull" id="4"/>
 							<reference ref="4"/>
 						</array>
+						<object class="NSColor" key="IBTintColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MCAwLjYgMC44AA</bytes>
+						</object>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 55}</string>
@@ -581,11 +585,13 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
+							<string key="name">HelveticaNeue-Light</string>
+							<string key="family">Helvetica Neue</string>
+							<int key="traits">0</int>
 							<double key="pointSize">15</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica</string>
+							<string key="NSName">HelveticaNeue-Medium</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
@@ -1265,8 +1271,8 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="btn_red.png">{50, 33}</string>
-			<string key="ic_action_block.png">{64, 64}</string>
-			<string key="ic_action_unpinup.png">{64, 64}</string>
+			<string key="ic_action_block.png">{32, 32}</string>
+			<string key="ic_action_unpinup.png">{32, 32}</string>
 			<string key="ic_profile_photo.png">{144, 144}</string>
 			<string key="ic_profile_photo_frame.png">{144, 144}</string>
 		</dictionary>
