--- a/Mapplas/Mapplas/classes/AppCell.xib
+++ b/Mapplas/Mapplas/classes/AppCell.xib
@@ -48,7 +48,6 @@
 								<array class="NSMutableArray" key="NSSubviews"/>
 								<string key="NSFrame">{{70, -1}, {250, 71}}</string>
 								<reference key="NSSuperview" ref="209533626"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -64,7 +63,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{7, 7}, {57, 57}}</string>
 								<reference key="NSSuperview" ref="209533626"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="265309560"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="385537761">
@@ -98,7 +96,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{7, 7}, {57, 57}}</string>
 								<reference key="NSSuperview" ref="209533626"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="371072881"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -111,7 +108,6 @@
 						</array>
 						<string key="NSFrameSize">{320, 70}</string>
 						<reference key="NSSuperview" ref="1040147846"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1014404432"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<reference key="IBUIBackgroundColor" ref="385537761"/>
@@ -124,7 +120,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 71}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="209533626"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -140,7 +135,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{22, 13}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="813753078"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -168,7 +162,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{17, 43}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="756325393"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -188,13 +181,13 @@
 						</object>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="145597094">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="39787097">
 							<string key="name">HelveticaNeue-Light</string>
 							<string key="family">Helvetica Neue</string>
 							<int key="traits">0</int>
 							<double key="pointSize">9</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="799031333">
+						<object class="NSFont" key="IBUIFont" id="302236541">
 							<string key="NSName">HelveticaNeue-Medium</string>
 							<double key="NSSize">9</double>
 							<int key="NSfFlags">16</int>
@@ -206,7 +199,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{78, 13}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="856930037"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -231,7 +223,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{73, 43}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="257641496"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -247,8 +238,8 @@
 						</object>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="145597094"/>
-						<reference key="IBUIFont" ref="799031333"/>
+						<reference key="IBUIFontDescription" ref="39787097"/>
+						<reference key="IBUIFont" ref="302236541"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIButton" id="827822060">
@@ -256,7 +247,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{134, 13}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="589030190"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -281,7 +271,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{129, 43}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="827822060"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -297,8 +286,8 @@
 						</object>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="145597094"/>
-						<reference key="IBUIFont" ref="799031333"/>
+						<reference key="IBUIFontDescription" ref="39787097"/>
+						<reference key="IBUIFont" ref="302236541"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIButton" id="585306260">
@@ -306,7 +295,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{190, 13}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -330,7 +318,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{185, 43}, {42, 21}}</string>
 						<reference key="NSSuperview" ref="321150316"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="585306260"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -346,14 +333,13 @@
 						</object>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="145597094"/>
-						<reference key="IBUIFont" ref="799031333"/>
+						<reference key="IBUIFontDescription" ref="39787097"/>
+						<reference key="IBUIFont" ref="302236541"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
 				<string key="NSFrameSize">{250, 71}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="441129935"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -372,7 +358,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{186, 4}, {64, 64}}</string>
 						<reference key="NSSuperview" ref="511086860"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -391,7 +376,7 @@
 							<int key="traits">0</int>
 							<double key="pointSize">14</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="647422039">
+						<object class="NSFont" key="IBUIFont" id="114388921">
 							<string key="NSName">HelveticaNeue-Medium</string>
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
@@ -402,7 +387,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{5, 1}, {183, 40}}</string>
 						<reference key="NSSuperview" ref="511086860"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1004149533"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -427,7 +411,7 @@
 							<int key="traits">0</int>
 							<double key="pointSize">14</double>
 						</object>
-						<reference key="IBUIFont" ref="647422039"/>
+						<reference key="IBUIFont" ref="114388921"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<double key="preferredMaxLayoutWidth">183</double>
 					</object>
@@ -436,7 +420,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{5, 34}, {183, 36}}</string>
 						<reference key="NSSuperview" ref="511086860"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="508694300"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -472,7 +455,6 @@
 				</array>
 				<string key="NSFrameSize">{250, 71}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="794630648"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -805,121 +787,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">184</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AppCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="animate:">id</string>
-						<string key="blockUnblockApp:">id</string>
-						<string key="launchApp:">id</string>
-						<string key="pinUnpinApp:">id</string>
-						<string key="rateApp:">id</string>
-						<string key="shareApp:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="animate:">
-							<string key="name">animate:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="blockUnblockApp:">
-							<string key="name">blockUnblockApp:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="launchApp:">
-							<string key="name">launchApp:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="pinUnpinApp:">
-							<string key="name">pinUnpinApp:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="rateApp:">
-							<string key="name">rateApp:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="shareApp:">
-							<string key="name">shareApp:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="appName">UILabel</string>
-						<string key="blockPressedText">UILabel</string>
-						<string key="cellContent">UIView</string>
-						<string key="cellPressed">UIView</string>
-						<string key="cellUnpressed">UIView</string>
-						<string key="description">UILabel</string>
-						<string key="imageLogo">UIImageView</string>
-						<string key="imageRoundView">UIImageView</string>
-						<string key="pinPressedImage">UIButton</string>
-						<string key="pinPressedText">UILabel</string>
-						<string key="priceButton">UIButton</string>
-						<string key="ratePressedText">UILabel</string>
-						<string key="sharePressedText">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="appName">
-							<string key="name">appName</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="blockPressedText">
-							<string key="name">blockPressedText</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cellContent">
-							<string key="name">cellContent</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cellPressed">
-							<string key="name">cellPressed</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cellUnpressed">
-							<string key="name">cellUnpressed</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="description">
-							<string key="name">description</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="imageLogo">
-							<string key="name">imageLogo</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="imageRoundView">
-							<string key="name">imageRoundView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="pinPressedImage">
-							<string key="name">pinPressedImage</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="pinPressedText">
-							<string key="name">pinPressedText</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="priceButton">
-							<string key="name">priceButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="ratePressedText">
-							<string key="name">ratePressedText</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sharePressedText">
-							<string key="name">sharePressedText</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AppCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
