--- a/Mapplas/Mapplas/classes/UserBlockedTableViewCell.xib
+++ b/Mapplas/Mapplas/classes/UserBlockedTableViewCell.xib
@@ -44,7 +44,7 @@
 							<object class="IBUIImageView" id="751175206">
 								<reference key="NSNextResponder" ref="311497382"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{4, 4}, {64, 64}}</string>
+								<string key="NSFrame">{{7, 6}, {57, 57}}</string>
 								<reference key="NSSuperview" ref="311497382"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="972942941"/>
@@ -56,25 +56,10 @@
 									<string key="NSResourceName">ic_template.png</string>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="625271141">
-								<reference key="NSNextResponder" ref="311497382"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{3, 3}, {66, 66}}</string>
-								<reference key="NSSuperview" ref="311497382"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="751175206"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">img_roundc.png</string>
-								</object>
-							</object>
 							<object class="IBUILabel" id="972942941">
 								<reference key="NSNextResponder" ref="311497382"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{74, 6}, {203, 21}}</string>
+								<string key="NSFrame">{{74, 15}, {183, 40}}</string>
 								<reference key="NSSuperview" ref="311497382"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="328435241"/>
@@ -94,21 +79,25 @@
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUINumberOfLines">2</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
-									<double key="pointSize">20</double>
+									<string key="name">HelveticaNeue-Medium</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
+									<double key="pointSize">14</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">20</double>
+									<string key="NSName">HelveticaNeue-Medium</string>
+									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<double key="preferredMaxLayoutWidth">183</double>
 							</object>
 							<object class="IBUIButton" id="840498011">
 								<reference key="NSNextResponder" ref="311497382"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{268, 14}, {32, 32}}</string>
+								<string key="NSFrame">{{272, 14}, {32, 32}}</string>
 								<reference key="NSSuperview" ref="311497382"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -143,7 +132,7 @@
 							<object class="IBUILabel" id="328435241">
 								<reference key="NSNextResponder" ref="311497382"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{263, 44}, {42, 21}}</string>
+								<string key="NSFrame">{{267, 44}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="311497382"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="840498011"/>
@@ -162,21 +151,23 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
+									<string key="name">HelveticaNeue-Light</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
 									<double key="pointSize">10</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">10</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
-						<string key="NSFrameSize">{320, 71}</string>
+						<string key="NSFrameSize">{320, 70}</string>
 						<reference key="NSSuperview" ref="34493906"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="625271141"/>
+						<reference key="NSNextKeyView" ref="751175206"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="60086157">
 							<int key="NSColorSpace">3</int>
@@ -189,7 +180,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 72}</string>
+				<string key="NSFrameSize">{320, 71}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="311497382"/>
@@ -202,14 +193,6 @@
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">appBackgroundLogo</string>
-						<reference key="source" ref="34493906"/>
-						<reference key="destination" ref="625271141"/>
-					</object>
-					<int key="connectionID">51</int>
-				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">appLogo</string>
@@ -275,7 +258,6 @@
 						<int key="objectID">3</int>
 						<reference key="object" ref="34493906"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="625271141"/>
 							<reference ref="751175206"/>
 							<reference ref="972942941"/>
 							<reference ref="328435241"/>
@@ -289,13 +271,6 @@
 						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="34493906"/>
 						<string key="objectName">Title label</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="625271141"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="34493906"/>
-						<string key="objectName">Image Round View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">21</int>
@@ -331,13 +306,12 @@
 				<string key="3.CustomClassName">UserBlockedTableViewCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">125</int>
+			<int key="maxID">149</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -402,7 +376,6 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="ic_action_unblock.png">{64, 64}</string>
 			<string key="ic_template.png">{124, 124}</string>
-			<string key="img_roundc.png">{132, 132}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
