--- a/Mapplas/Mapplas/classes/UserListTableViewCell.xib
+++ b/Mapplas/Mapplas/classes/UserListTableViewCell.xib
@@ -44,7 +44,7 @@
 							<object class="IBUIImageView" id="528410649">
 								<reference key="NSNextResponder" ref="103314023"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{4, 4}, {64, 64}}</string>
+								<string key="NSFrame">{{7, 6}, {57, 57}}</string>
 								<reference key="NSSuperview" ref="103314023"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="703810071"/>
@@ -56,25 +56,10 @@
 									<string key="NSResourceName">ic_template.png</string>
 								</object>
 							</object>
-							<object class="IBUIImageView" id="491378312">
-								<reference key="NSNextResponder" ref="103314023"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{3, 3}, {66, 66}}</string>
-								<reference key="NSSuperview" ref="103314023"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="528410649"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">img_roundc.png</string>
-								</object>
-							</object>
 							<object class="IBUILabel" id="703810071">
 								<reference key="NSNextResponder" ref="103314023"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{74, 6}, {203, 21}}</string>
+								<string key="NSFrame">{{74, 1}, {183, 40}}</string>
 								<reference key="NSSuperview" ref="103314023"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="379157850"/>
@@ -84,7 +69,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Label</string>
+								<string key="IBUIText">WhatsApp Messenger Hello asdfsadf</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xMjk0MTE3NjQ3IDAuMTI5NDExNzY0NyAwLjEyOTQxMTc2NDcAA</bytes>
@@ -94,21 +79,25 @@
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUINumberOfLines">2</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
-									<double key="pointSize">20</double>
+									<string key="name">HelveticaNeue-Medium</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
+									<double key="pointSize">14</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">20</double>
+									<string key="NSName">HelveticaNeue-Medium</string>
+									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<double key="preferredMaxLayoutWidth">183</double>
 							</object>
 							<object class="IBUILabel" id="379157850">
 								<reference key="NSNextResponder" ref="103314023"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{74, 31}, {194, 37}}</string>
+								<string key="NSFrame">{{74, 34}, {183, 36}}</string>
 								<reference key="NSSuperview" ref="103314023"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="885999216"/>
@@ -118,7 +107,7 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Label</string>
+								<string key="IBUIText">Label1 location location donostia san sebastian</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xMjk0MTE3NjQ3IDAuMTI5NDExNzY0NyAwLjEyOTQxMTc2NDcAA</bytes>
@@ -127,21 +116,23 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUINumberOfLines">2</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
+									<string key="name">HelveticaNeue-Light</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
 									<double key="pointSize">12</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">12</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-								<double key="preferredMaxLayoutWidth">194</double>
+								<double key="preferredMaxLayoutWidth">183</double>
 							</object>
 							<object class="IBUIButton" id="254500819">
 								<reference key="NSNextResponder" ref="103314023"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{268, 14}, {32, 32}}</string>
+								<string key="NSFrame">{{272, 14}, {32, 32}}</string>
 								<reference key="NSSuperview" ref="103314023"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -176,7 +167,7 @@
 							<object class="IBUILabel" id="885999216">
 								<reference key="NSNextResponder" ref="103314023"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{263, 44}, {42, 21}}</string>
+								<string key="NSFrame">{{267, 44}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="103314023"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="254500819"/>
@@ -195,21 +186,23 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
+									<string key="name">HelveticaNeue-Light</string>
+									<string key="family">Helvetica Neue</string>
+									<int key="traits">0</int>
 									<double key="pointSize">10</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
+									<string key="NSName">HelveticaNeue-Medium</string>
 									<double key="NSSize">10</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
-						<string key="NSFrameSize">{320, 71}</string>
+						<string key="NSFrameSize">{320, 70}</string>
 						<reference key="NSSuperview" ref="170092284"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="491378312"/>
+						<reference key="NSNextKeyView" ref="528410649"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="522849761">
 							<int key="NSColorSpace">3</int>
@@ -222,7 +215,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 72}</string>
+				<string key="NSFrameSize">{320, 71}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="103314023"/>
@@ -258,14 +251,6 @@
 						<reference key="destination" ref="703810071"/>
 					</object>
 					<int key="connectionID">96</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">appBackgroundLogo</string>
-						<reference key="source" ref="170092284"/>
-						<reference key="destination" ref="491378312"/>
-					</object>
-					<int key="connectionID">99</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -317,20 +302,12 @@
 						<reference key="object" ref="170092284"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="528410649"/>
-							<reference ref="491378312"/>
 							<reference ref="703810071"/>
-							<reference ref="379157850"/>
 							<reference ref="885999216"/>
 							<reference ref="254500819"/>
+							<reference ref="379157850"/>
 						</array>
 						<reference key="parent" ref="0"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">4</int>
-						<reference key="object" ref="491378312"/>
-						<array class="NSMutableArray" key="children"/>
-						<reference key="parent" ref="170092284"/>
-						<string key="objectName">Image Round View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
@@ -377,7 +354,6 @@
 				<string key="3.CustomClassName">UserListTableViewCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="30.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="83.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -385,7 +361,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">140</int>
+			<int key="maxID">144</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -453,9 +429,8 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="ic_action_unpinup.png">{64, 64}</string>
+			<string key="ic_action_unpinup.png">{32, 32}</string>
 			<string key="ic_template.png">{124, 124}</string>
-			<string key="img_roundc.png">{132, 132}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
