--- a/Mapplas/Mapplas/classes/UserEmptyTableViewCell.xib
+++ b/Mapplas/Mapplas/classes/UserEmptyTableViewCell.xib
@@ -96,6 +96,7 @@
 				<reference key="NSNextKeyView" ref="225771920"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<int key="IBUISelectionStyle">0</int>
 				<reference key="IBUIContentView" ref="225771920"/>
 				<string key="IBUIReuseIdentifier">EmptyTableItem</string>
 			</object>
