--- a/Mapplas/Mapplas/UserViewController.xib
+++ b/Mapplas/Mapplas/UserViewController.xib
@@ -546,10 +546,7 @@
 							<object class="NSNull" id="4"/>
 							<reference ref="4"/>
 						</array>
-						<object class="NSColor" key="IBTintColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwLjYgMC44AA</bytes>
-						</object>
+						<reference key="IBTintColor" ref="416883880"/>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 55}</string>
