--- a/Mapplas/Mapplas/classes/UserListTableViewCell.xib
+++ b/Mapplas/Mapplas/classes/UserListTableViewCell.xib
@@ -16,6 +16,7 @@
 			<string>IBUIImageView</string>
 			<string>IBUILabel</string>
 			<string>IBUITableViewCell</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -41,6 +42,22 @@
 						<reference key="NSNextResponder" ref="170092284"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIView" id="88923672">
+								<reference key="NSNextResponder" ref="103314023"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrameSize">{320, 71}</string>
+								<reference key="NSSuperview" ref="103314023"/>
+								<reference key="NSWindow"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MQA</bytes>
+									<object class="NSColorSpace" key="NSCustomColorSpace">
+										<int key="NSID">2</int>
+									</object>
+								</object>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
 							<object class="IBUIImageView" id="528410649">
 								<reference key="NSNextResponder" ref="103314023"/>
 								<int key="NSvFlags">292</int>
@@ -54,6 +71,21 @@
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">ic_template.png</string>
+								</object>
+							</object>
+							<object class="IBUIImageView" id="247097879">
+								<reference key="NSNextResponder" ref="103314023"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrameSize">{71, 71}</string>
+								<reference key="NSSuperview" ref="103314023"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="528410649"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">img_roundc_btn.png</string>
 								</object>
 							</object>
 							<object class="IBUILabel" id="703810071">
@@ -201,9 +233,9 @@
 						<string key="NSFrameSize">{320, 70}</string>
 						<reference key="NSSuperview" ref="170092284"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="528410649"/>
+						<reference key="NSNextKeyView" ref="247097879"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="522849761">
+						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
@@ -219,7 +251,7 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="103314023"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="522849761"/>
+				<reference key="IBUIBackgroundColor" ref="853167963"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<int key="IBUISelectionStyle">0</int>
 				<reference key="IBUIContentView" ref="103314023"/>
@@ -306,6 +338,8 @@
 							<reference ref="885999216"/>
 							<reference ref="254500819"/>
 							<reference ref="379157850"/>
+							<reference ref="247097879"/>
+							<reference ref="88923672"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -342,6 +376,16 @@
 						<reference key="parent" ref="170092284"/>
 						<string key="objectName">Unpin button</string>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">145</int>
+						<reference key="object" ref="247097879"/>
+						<reference key="parent" ref="170092284"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">146</int>
+						<reference key="object" ref="88923672"/>
+						<reference key="parent" ref="170092284"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -350,6 +394,8 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="138.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="145.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="146.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">UserListTableViewCell</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -361,7 +407,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">144</int>
+			<int key="maxID">146</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -431,6 +477,7 @@
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="ic_action_unpinup.png">{32, 32}</string>
 			<string key="ic_template.png">{57, 57}</string>
+			<string key="img_roundc_btn.png">{71, 71}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
